Fixed z-index bug

--- a/resources/assets/less/includes/pages/crm.less
+++ b/resources/assets/less/includes/pages/crm.less
@@ -424,7 +424,7 @@
     .page-aside{
         left:110px;
         padding-top:0;
-        z-index: 3;
+        z-index: 1033;
 
         @media @phone {
             left:0;
@@ -433,6 +433,7 @@
             width: 96.2%;
             margin-left: 10px;
             margin-bottom:-15px;
+            z-index:1000;
         }
         @media @tablet {
             left:0;
@@ -441,6 +442,7 @@
             margin-top:70px;
             margin-left: 10px;
             margin-bottom:-15px;
+            z-index:1000;
         }
 
         .panel-heading{
